#113: Use new 'List' factory methods.