@@ -21,7 +21,6 @@ package io.jenetics.jpx;
 
 import static java.lang.String.format;
 import static java.util.Arrays.asList;
-import static java.util.Collections.emptyList;
 import static java.util.Objects.requireNonNull;
 import static javax.xml.stream.XMLStreamConstants.CDATA;
 import static javax.xml.stream.XMLStreamConstants.CHARACTERS;
@@ -31,8 +30,11 @@ import static javax.xml.stream.XMLStreamConstants.END_ELEMENT;
 import static javax.xml.stream.XMLStreamConstants.START_ELEMENT;
 import static io.jenetics.jpx.Lists.copyOf;
 
+import org.w3c.dom.Document;
+
+import javax.xml.stream.XMLStreamException;
+import javax.xml.stream.XMLStreamReader;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -41,11 +43,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-
-import javax.xml.stream.XMLStreamException;
-import javax.xml.stream.XMLStreamReader;
-
-import org.w3c.dom.Document;
 
 import io.jenetics.jpx.XMLReader.Type;
 
@@ -445,9 +442,7 @@ final class ListReader<T> extends XMLReader<List<T>> {
 	{
 		xml.require(START_ELEMENT, null, name());
 		final T element = _adoptee.read(xml, lenient);
-		return element != null
-			? Collections.singletonList(element)
-			: emptyList();
+		return element != null ? List.of(element) : List.of();
 	}
 
 	XMLReader<? extends T> reader() {
@@ -470,7 +465,7 @@ final class IgnoreReader extends XMLReader<Object> {
 
 	IgnoreReader(final String name) {
 		super(name, Type.ELEM);
-		_reader = new ElemReader<>(name, o -> o, emptyList(), Type.ELEM);
+		_reader = new ElemReader<>(name, o -> o, List.of(), Type.ELEM);
 	}
 
 	@Override
